# houra-flutter

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md  SECURITY.md  pubspec.yaml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  maintenance.md
.github/workflows/: sdk-check.yml
example/: main.dart
go-protocol-core/: go.mod  versions.go  versions_test.go
lib/: houra.dart  okaka.dart
lib/src/: auth.dart  client.dart  device_keys.dart  discovery.dart  errors.dart  flutter_theme.dart  media.dart  messaging.dart  models.dart  rooms.dart  (+3 more)
rust-protocol-core/: Cargo.toml  README.md
rust-protocol-core-wasm/: Cargo.toml
rust-protocol-core-wasm/src/: lib.rs
rust-protocol-core/src/: lib.rs
test/: appservice_contract_test.dart  auth_contract_test.dart  device_keys_contract_test.dart  discovery_contract_test.dart  example_usage_test.dart  federation_contract_test.dart  federation_parser_helpers_contract_test.dart  identity_contract_test.dart  media_contract_test.dart  messaging_contract_test.dart  oss_hygiene_test.dart  public_api_test.dart  push_contract_test.dart  release_evidence_helper_test.dart  room_versions_e2ee_artifacts_contract_test.dart  rooms_events_contract_test.dart  spec_source_test.dart  sync_contract_test.dart  theme_tokens_test.dart  transport_core_test.dart  vector_test_support.dart
tool/: benchmark_shared_core.dart  check_spec_sync.dart  generate_release_evidence.dart  release_evidence_helpers.dart
ts-protocol-core-wasm/: README.md  benchmark.mjs  package-lock.json  package.json  tsconfig.json
(+3 files in other folders)
